--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
     </style>
 </head>
-<body style="background-image: url('image/2.jpg'); background-size:auto; background-repeat: no-repeat; width: 100%;">
+<body style="background-image: url('2.jpg'); background-size:auto; background-repeat: no-repeat; width: 100%;">
     <div class="img">
         <img src="image/toy1.png" alt="Toy Image">
     </div>
@@ -200,3 +200,4 @@
 </body>
 
 </html>
+
