--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
 
 
 
-
-
-
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -55,15 +49,12 @@
         }
     </style>
 </head>
-<body style="background-image: url('2.jpg'); background-size:auto; background-repeat: no-repeat; width: 100%;">
+<body style="background-image: url('image/2.jpg'); background-size:auto; background-repeat: no-repeat; width: 100%;">
     <div class="img">
         <img src="image/toy1.png" alt="Toy Image">
-
     </div>
-                <center><h1 class="title">TOY FOR ALL AGES</h1>
-
+    <center><h1 class="title">TOY FOR ALL AGES</h1>
     <p class="cp">
-        
     "Discover and shop the coolest toys for all ages, where fun meets imagination!"<br> Toys for all ages are fun, educational, and safe.<br> Explore our wide variety of toys and find the perfect one for your loved ones!<br> Toy is not for only kids  <br>it for all sell and buy both.</p>
     </center>
 
@@ -201,9 +192,4 @@
 
     </script>
 </body>
-
 </html>
-
-
-
-
