--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
     </style>
 </head>
-<body style="background-image: url('image/2.jpg'); background-size:auto; background-repeat: no-repeat; width: 100%;">
+<body style="background-image: url('2.jpg'); background-size:auto; background-repeat: no-repeat; width: 100%;">
     <div class="img">
         <img src="image/toy1.png" alt="Toy Image">
     </div>
@@ -193,3 +193,4 @@
     </script>
 </body>
 </html>
+
