--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body style="background-image: url('2.jpg'); background-size:auto; background-repeat: no-repeat; width: 100%;">
     <div class="img">
-        <img src="image/toy1.png" alt="Toy Image">
+        <img src="toy1.png" alt="Toy Image">
     </div>
     <center><h1 class="title">TOY FOR ALL AGES</h1>
     <p class="cp">
@@ -63,7 +63,7 @@
     </div>
 
     <div class="img1">
-        <img src="image/c3pl-removebg-preview.png" alt="">
+        <img src="c3pl-removebg-preview.png" alt="">
     </div>
 
 
@@ -75,7 +75,7 @@
 
    <!-- User Info Section -->
    <div class="user-info">
-    <img src="image/user.png" alt="User Icon" class="user-icon">
+    <img src="user.png" alt="User Icon" class="user-icon">
     <div class="username">
         <?php echo isset($_SESSION['username']) ? htmlspecialchars($_SESSION['username']) : ''; ?>
     </div>
@@ -193,4 +193,5 @@
     </script>
 </body>
 </html>
+
 
