--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 
     <!-- Slider Section -->
     <div class="slider">
-        <img class="slides" src="image/f3img.jpeg" alt="Image 1">
-        <img class="slides" src="image/f2img.png" alt="Image 2">
-        <img class="slides" src="image/fimg.png" alt="Image 3">
+        <img class="slides" src="f3img.jpeg" alt="Image 1">
+        <img class="slides" src="f2img.png" alt="Image 2">
+        <img class="slides" src="fimg.png" alt="Image 3">
         <div class="slider-nav">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
@@ -193,5 +193,6 @@
     </script>
 </body>
 </html>
+
 
 
