--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <video width="320" height="240" controls>
-        <source src="image/v.mp4" type="video/mp4">
+        <source src="v.mp4" type="video/mp4">
     </video>
 
 
@@ -132,16 +132,16 @@
             </div>
             <div class="footer-section social-media">
                 <h3>Follow Us</h3>
-                <a href="#"><img src="image/facebook.png" alt="Facebook" class="social-icon"></a>
-                <a href="https://x.com/home?lang=en"><img src="image/twitter.png" alt="Twitter" class="social-icon"></a>
-                <a href="https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1"><img src="image/instagram.png" alt="Instagram" class="social-icon"></a>
-                <a href="#"><img src="image/linkedin.png" alt="Instagram" class="social-icon"></a>
+                <a href="#"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
+                <a href="https://x.com/home?lang=en"><img src="twitter.png" alt="Twitter" class="social-icon"></a>
+                <a href="https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1"><img src="instagram.png" alt="Instagram" class="social-icon"></a>
+                <a href="#"><img src="linkedin.png" alt="Instagram" class="social-icon"></a>
             </div>
             <div class="footer-section photos">
                 <h3>Gallery</h3>
-                <img src="image/fimg.png" alt="Photo 1" class="footer-photo">
-                <img src="image/f2img.png" alt="Photo 2" class="footer-photo">
-                <img src="image/f3img.jpeg" alt="Photo 3" class="footer-photo">
+                <img src="fimg.png" alt="Photo 1" class="footer-photo">
+                <img src="f2img.png" alt="Photo 2" class="footer-photo">
+                <img src="f3img.jpeg" alt="Photo 3" class="footer-photo">
             </div>
         </div>
         <div class="footer-bottom">
@@ -193,6 +193,7 @@
     </script>
 </body>
 </html>
+
 
 
 
