--- a/home.html
+++ b/home.html
@@ -38,31 +38,31 @@
 <section class="by-age-container">
     <div class="by-age">
         <a href="0-6.php">
-            <img src="image/ho1.png" alt="Image" class="shake">
+            <img src="ho1.png" alt="Image" class="shake">
             <span class="sp">0-6 year</span>
         </a>
     </div>
     <div class="by-age">
         <a href="7-13.php">
-            <img src="image/ho1.png" alt="Image" class="shake">
+            <img src="ho1.png" alt="Image" class="shake">
             <span class="sp">7-13 years</span>
         </a>
     </div>
     <div class="by-age">
         <a href="14-19.php">
-            <img src="image/ho1.png" alt="Image" class="shake">
+            <img src="ho1.png" alt="Image" class="shake">
             <span class="sp">14-19 years</span>
         </a>
     </div>
     <div class="by-age">
         <a href="19-28.php">
-            <img src="image/ho1.png" alt="Image" class="shake">
+            <img src="ho1.png" alt="Image" class="shake">
             <span class="sp">19-28 years</span>
         </a>
     </div>
     <div class="by-age">
         <a href="29-39.php">
-            <img src="image/ho1.png" alt="Image" class="shake">
+            <img src="ho1.png" alt="Image" class="shake">
             <span class="sp">29-39 years</span>
         </a>
     </div>
@@ -73,31 +73,31 @@
 
     <div class="by-cat">
         <a href="toyandg.html">
-            <img src="image/noo.png" alt="Image" class="shake">
+            <img src="noo.png" alt="Image" class="shake">
             <span class="ca">Toy And Game</span>
         </a>
     </div>
     <div class="by-cat">
         <a href="spotandout.php">
-            <img src="image/so.png" alt="Image" class="shake">
+            <img src="so.png" alt="Image" class="shake">
             <span class="ca">Sport And Outdoor</span>
         </a>
     </div>
     <div class="by-cat">
         <a href="ridndcy.php">
-            <img src="image/rc.png" alt="Image" class="shake">
+            <img src="rc.png" alt="Image" class="shake">
             <span class="ca">Rideons And Cycle</span>
         </a>
     </div>
     <div class="by-cat">
         <a href="schndtv.php">
-            <img src="image/st.png" alt="Image" class="shake">
+            <img src="st.png" alt="Image" class="shake">
             <span class="ca">School And Travel</span>
         </a>
     </div>
     <div class="by-cat">
         <a href="buk.php">
-            <img src="image/bk.png" alt="Image" class="shake">
+            <img src="bk.png" alt="Image" class="shake">
             <span class="ca">Book</span>
         </a>
     </div>
@@ -110,31 +110,31 @@
     <div class="by-bd">
         
         <a href="lego.php">
-            <img src="image/lo.png" alt="Image" class="shake">
+            <img src="lo.png" alt="Image" class="shake">
             <span class="ca1">LEGO</span>
         </a>
     </div>
     <div class="by-bd">
         <a href="noddy.php">
-            <img src="image/nd.png" alt="Image" class="shake">
+            <img src="nd.png" alt="Image" class="shake">
             <span class="ca1">NODDY</span>
         </a>
     </div>
     <div class="by-bd">
         <a href="babi.php">
-            <img src="image/b.png" alt="Image" class="shake">
+            <img src="b.png" alt="Image" class="shake">
             <span class="ca1">BARBIE</span>
         </a>
     </div>
     <div class="by-bd">
         <a href="hotwil.php">
-            <img src="image/hw.png" alt="Image" class="shake">
+            <img src="hw.png" alt="Image" class="shake">
             <span class="ca1">HOTWHEELS</span>
         </a>
     </div>
     <div class="by-bd">
         <a href="nerf.php">
-            <img src="image/nf.png" alt="Image" class="shake">
+            <img src="nf.png" alt="Image" class="shake">
             <span class="ca1">NERF</span>
         </a>
     </div>
@@ -148,31 +148,31 @@
 <section class="char">
     <div class="by-char">
         <a href="avrang.php">
-            <img src="image/ca.png" alt="Image" class="shake">
+            <img src="ca.png" alt="Image" class="shake">
             <span class="sc">AVRANGERS</span>
         </a>
     </div>
     <div class="by-char">
         <a href="hryptter.php">
-            <img src="image/hp.png" alt="Image" class="shake">
+            <img src="hp.png" alt="Image" class="shake">
             <span class="sc">HERRY-POTTER</span>
         </a>
     </div>
     <div class="by-char">
         <a href="mimi.php">
-            <img src="image/mm.png" alt="Image" class="shake">
+            <img src="mm.png" alt="Image" class="shake">
             <span class="sc">MICKY-MINNIE</span>
         </a>
     </div>
     <div class="by-char">
         <a href="spyman.php">
-            <img src="image/sm.png" alt="Image" class="shake">
+            <img src="sm.png" alt="Image" class="shake">
             <span class="sc">SPYDER-MAN</span>
         </a>
     </div>
     <div class="by-char">
         <a href="babii.php">
-            <img src="image/bb.png" alt="Image" class="shake">
+            <img src="bb.png" alt="Image" class="shake">
             <span class="sc">BARBIE</span>
         </a>
     </div>
@@ -200,16 +200,16 @@
         </div>
         <div class="footer-section social-media">
             <h3>Follow Us</h3>
-            <a href="#"><img src="image/facebook.png" alt="Facebook" class="social-icon"></a>
-            <a href="https://x.com/home?lang=en"><img src="image/twitter.png" alt="Twitter" class="social-icon"></a>
-            <a href="https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1"><img src="image/instagram.png" alt="Instagram" class="social-icon"></a>
-            <a href="#"><img src="image/linkedin.png" alt="LinkedIn" class="social-icon"></a>
+            <a href="#"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
+            <a href="https://x.com/home?lang=en"><img src="twitter.png" alt="Twitter" class="social-icon"></a>
+            <a href="https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1"><img src="instagram.png" alt="Instagram" class="social-icon"></a>
+            <a href="#"><img src="linkedin.png" alt="LinkedIn" class="social-icon"></a>
         </div>
         <div class="footer-section photos">
             <h3>Gallery</h3>
-            <img src="image/fimg.png" alt="Photo 1" class="footer-photo">
-            <img src="image/f2img.png" alt="Photo 2" class="footer-photo">
-            <img src="image/f3img.jpeg" alt="Photo 3" class="footer-photo">
+            <img src="fimg.png" alt="Photo 1" class="footer-photo">
+            <img src="f2img.png" alt="Photo 2" class="footer-photo">
+            <img src="f3img.jpeg" alt="Photo 3" class="footer-photo">
         </div>
     </div>
     <div class="footer-bottom">
@@ -229,6 +229,7 @@
 
 </body>
 </html>
+
 
 
 
