--- a/home.html
+++ b/home.html
@@ -122,7 +122,7 @@
     </div>
     <div class="by-bd">
         <a href="babi.php">
-            <img src="b.png" alt="Image" class="shake">
+            <img src="bb.png" alt="Image" class="shake">
             <span class="ca1">BARBIE</span>
         </a>
     </div>
@@ -229,6 +229,7 @@
 
 </body>
 </html>
+
 
 
 
