--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 <h2>Shop By Age😇</h2>
 <section class="by-age-container">
     <div class="by-age">
-        <a href="0-6.php">
+        <a href="0-6.html">
             <img src="ho1.png" alt="Image" class="shake">
             <span class="sp">0-6 year</span>
         </a>
@@ -229,6 +229,7 @@
 
 </body>
 </html>
+
 
 
 
